@@ -894,6 +894,30 @@ Get the constant value of C<STDOUT_FILENO>. If the system doesn't define this co
 
 Get the constant value of C<STDERR_FILENO>. If the system doesn't define this constant, an exception will be thrown. The error code is set to the class id of the L<Error::NotSupported|SPVM::Error::NotSupported> class.
 
+=head2 BUFSIZ
+
+  static method BUFSIZ : int ();
+
+Get the constant value of C<BUFSIZ>. If the system doesn't define this constant, an exception will be thrown. The error code is set to the class id of the L<Error::NotSupported|SPVM::Error::NotSupported> class.
+
+=head2 _IONBF
+
+  static method _IONBF : int ();
+
+Get the constant value of C<_IONBF>. If the system doesn't define this constant, an exception will be thrown. The error code is set to the class id of the L<Error::NotSupported|SPVM::Error::NotSupported> class.
+
+=head2 _IOLBF
+
+  static method _IOLBF : int ();
+
+Get the constant value of C<_IOLBF>. If the system doesn't define this constant, an exception will be thrown. The error code is set to the class id of the L<Error::NotSupported|SPVM::Error::NotSupported> class.
+
+=head2 _IOFBF
+
+  static method _IOFBF : int ();
+
+Get the constant value of C<_IOFBF>. If the system doesn't define this constant, an exception will be thrown. The error code is set to the class id of the L<Error::NotSupported|SPVM::Error::NotSupported> class.
+
 =head1 Copyright & License
 
 Copyright 2022-2022 Yuki Kimoto, all rights reserved.
