@@ -247,4 +247,12 @@ class Sys::IO::Constant {
   native static method STDOUT_FILENO : int ();
 
   native static method STDERR_FILENO : int ();
+
+  native static method BUFSIZ : int ();
+
+  native static method _IONBF : int ();
+
+  native static method _IOLBF : int ();
+
+  native static method _IOFBF : int ();
 }
